# mytorch

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  requirements.txt
aten/: CMakeLists.txt
aten/src/ATen/core/: TensorBase.h  TensorBody.h  tensor_base.h  tensor_body.h
c10/: CMakeLists.txt
c10/core/: Allocator.cpp  Allocator.h  Device.cpp  Device.h  DeviceGuard.h  DeviceType.cpp  DeviceType.h  DispatchKey.cpp  DispatchKey.h  DispatchKeySet.cpp  DispatchKeySet.h  GeneratorImpl.cpp  GeneratorImpl.h  ScalarType.h  SizesAndStrides.h  Storage.cpp  Storage.h  StorageImpl.cpp  StorageImpl.h  TensorImpl.h  UndefinedTensorImpl.cpp  UndefinedTensorImpl.h  device.cpp  device.h  device_type.cpp  device_type.h  dispatch_key.cpp  dispatch_key.h  tensor_impl.h  undefined_tensor_impl.cpp  undefined_tensor_impl.h
c10/core/impl/: DeviceGuardImplInterface.cpp  DeviceGuardImplInterface.h  InlineDeviceGuard.h  VirtualGuardImpl.h
c10/cpu/: CPUAllocator.cpp  CPUAllocator.h
c10/cpu/impl/: alloc.cpp  alloc.h
c10/util/: ArrayRef.h  BitsUtil.h  Exception.cpp  Exception.h  FloatingPointUtils.h  Half.h  IntrusivePtr.cpp  IntrusivePtr.h  Macros.h  MaybeOwned.h  UniqueVoidPtr.h  array_ref.cpp  array_ref.h  exception.cpp  exception.h  intrusive_ptr.h  macros.h  maybe_owned.h  string_util.h  typeid.h
test/: .gitignore  CMakeLists.txt  add_test.cpp  array_ref_test.cpp  device_test.cpp  intrusive_ptr_test.cpp  maybe_owned_test.cpp  str_test.cpp  temp_test.cpp
test/c10/: CPUAllocator_test.cpp  array_ref_test.cpp  device_guard_test.cpp  dispatch_keyset_test.cpp  intrusive_ptr_test.cpp  maybe_owned_test.cpp  trailing_bits_test.cpp
