
file(GLOB_RECURSE TEST_SOURCES "*_test.cpp")
if(BUILD_TEST)
  foreach(test_src ${TEST_SOURCES})
    get_filename_component(test_name ${test_src} NAME_WE)
    add_executable(${test_name} ${test_src})
    target_compile_options(${test_name} PRIVATE -Wno-unused-parameter)
    target_link_libraries(${test_name} PRIVATE gtest gtest_main c10)
    add_test(NAME ${test_name} COMMAND $<TARGET_FILE:${test_name}>)
    if(INSTALL_TEST)
      install(TARGETS ${test_name} DESTINATION test)
    endif()
  endforeach()

endif()
